Details
-
Bug
-
Resolution: Fixed
-
Minor
-
None
Description
reactos-bootcd-0.4.14-dev-1370-geb1fd0c-x86-gcc-lin-dbg
Settigns RAPPS local folder to a read only path (D:\ CDROM) leads to download stop without error message nor log entry
Globally a lot of "goto end;" in loaddlg.cpp without neither DPRINT1 nor error message to the user.
Attachments
Issue Links
- relates to
-
CORE-20743 [RAPPS] Fail to update database if "software source" is a read-only file://
-
- Resolved
-